--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Links Profile</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="/images/perritos.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./images/perritos.jpg" type="image/x-icon" />
   </head>
   <body>
     <main>
