--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <section class="social_container">
         <div class="social_upper">
-          <img src="/images/perritos.jpg" alt="Social Image" />
+          <img src="./images/perritos.jpg" alt="Social Image" />
           <h1>Margiory Delgadillo</h1>
           <p class="location_text">Lima, Perú</p>
           <p class="quote">"Front-end developer and avid reader."</p>
